--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "exceljs": "^4.1.1",
     "puppeteer": "^5.3.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
